# goit_module2_week14

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  schemas.py
conf/: config.py
database/: db.py  models.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
repository/: contacts.py  users.py
routes/: auth.py  contacts.py  users.py
services/: auth.py  email.py
tests/: test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
